Adjusted down to 375px,  fixed contrast

--- a/cs464-group-project/src/style/Home/Home.css
+++ b/cs464-group-project/src/style/Home/Home.css
@@ -49,3 +49,9 @@ h1 .league-logo {
     width: 250px;
   }
 }
+
+@media (max-width: 414px) {
+  #team-ranking-container {
+    padding: 8px;
+  }
+}
